create controllers and endpoint for update of categories & transaction

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=expense
+spring.application.name=expense-batch
 spring.datasource.url=jdbc:postgresql://localhost:5432/expense_db
 spring.datasource.username=expense_user
 spring.datasource.password=securepass123
