--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/expense_db
 spring.datasource.username=expense_user
 spring.datasource.password=securepass123
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.batch.jdbc.initialize-schema=always
 
 
