--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.datasource.username=expense_user
 spring.datasource.password=securepass123
 
 spring.jpa.hibernate.ddl-auto=none
-spring.batch.jdbc.initialize-schema=always
+application.active.user=Ravi
 
 
