updated parsing mechanism using java streams

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,6 @@ spring.datasource.password=securepass123
 
 spring.jpa.hibernate.ddl-auto=none
 application.active.user=Ravi
+application.encryption.password=${ENCRYPTION_PWD}
 
 
